[Fixes #18034171] Searchers don't see too much paragraph spacing for featured collection headings

--- a/app/stylesheets/_search.sass
+++ b/app/stylesheets/_search.sass
@@ -277,6 +277,7 @@ a.serp-link
     margin-bottom:  0.75em
     h2
       color: #C51432
+      line-height: 1.2em
       margin: 0 0 10px
     span.by-usa-gov, span.recommended-by
       :color gray
